--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <nav>
         <ul>
           <li><a href="/games/games.html">Games</a></li>
-          <li><a href="/news/news.html">News</a></li>
+          <li><a href="/news/dist/index.html">News</a></li>
           <li><a href="/blogs/blogs.html">Blogs</a></li>
           <li><a href="/tools/tools.html">Tools</a></li>
         </ul>
@@ -52,8 +52,8 @@
           <p class="games-section-desc">One grid, nine lives! Sudoku: where logic meets serenity.</p>
         </div>
         <div id="whereswaldo">
-          <img class="games-section-img" src="/assets/img/waldo.jpeg" alt="">
-          <a href="games.html" class="games-section-heading">Where's Waldo?</a>
+          <img class="games-section-img" src="/assets/img/games/waldo.jpeg" alt="">
+          <a href="games/wheres-waldo.html" class="games-section-heading">Where's Waldo?</a>
           <p class="games-section-desc">Blink and you’ll miss him! Waldo’s a masterclass in vanishing acts.</p>
         </div>
         <div id="tictactoe">
@@ -62,7 +62,7 @@
           <p class="games-section-desc">Three in a row, one mind to outsmart! Tic Tac Toe’s a battle of wits.</p>
         </div>
       </div>
-      <a href="games.html" class="btn">Go to Games</a>
+      <a href="games/games.html" class="btn">Go to Games</a>
     </section>
 
     <!-- News Highlights -->
@@ -73,17 +73,17 @@
         <div>
           <div id="worldNews">
             <!-- <img class = "news-section-img"src="" alt=""> -->
-            <a href="news.html" class="news-section-heading">World News</a>
+            <a href="news/dist/index.html" class="news-section-heading">World News</a>
             <p class="news-section-desc">Stay in the know with global headlines that matter.</p>
           </div>
           <div id="sportsNews">
             <!-- <img class = "news-section-img"src="" alt=""> -->
-            <a href="news.html" class="news-section-heading">Sports News</a>
+            <a href="news/dist/index.html" class="news-section-heading">Sports News</a>
             <p class="news-section-desc">Big plays. Bigger moments. Whether it's a match-winning six or a buzzer-beater, we’ve got the highlights, heartbreaks, and heroics.</p>
           </div>
           <div id="trending">
             <!-- <img class = "news-section-img"src="" alt=""> -->
-            <a href="news.html" class="news-section-heading">Trending</a>
+            <a href="news/dist/index.html" class="news-section-heading">Trending</a>
             <p class="news-section-desc">From viral videos to cultural shakeups, here’s what the internet can't stop talking about.</p>
           </div>
         </div>
@@ -94,7 +94,7 @@
           <div></div>
         </div>
       </div>
-      <a href="news.html" class="btn">Go to News</a>
+      <a href="news/dist/index.html" class="btn">Go to News</a>
     </section>
 
     <!-- Featured Blog -->
@@ -105,23 +105,23 @@
       <div class="blogs-section-menu">
         <div id="sudoku">
           <img class="blogs-section-img" src="" alt="">
-          <a href="blogs.html" class="blogs-section-heading">Nature and You</a>
+          <a href="blogs/blogs.html" class="blogs-section-heading">Nature and You</a>
           <p class="blogs-section-desc">Sustainable living is need of the hour.</p>
         </div>
         <div id="whereswaldo">
           <img class="blogs-section-img" src="" alt="">
-          <a href="blogs.html" class="blogs-section-heading">Your Style Speaks for You</a>
+          <a href="blogs/blogs.html" class="blogs-section-heading">Your Style Speaks for You</a>
           <p class="blogs-section-desc">Latest styling ideas to reinvent your wardrobe.</p>
         </div>
       </div>
-      <a href="blogs.html" class="btn">Go to blogs</a>
+      <a href="blogs/blogs.html" class="btn">Go to Blogs</a>
     </section>
 
     <!-- Tools -->
     <section class="daily-dose">
       <h3>Tools</h3>
       <p>Find Useful daily use tools to make life Easy .</p>
-      <blockquote>“The best way to predict the future is to invent it.” – Alan Kay</blockquote>
+      <a href="tools/tools.html" class="btn">Go to Tools</a>
     </section>
   </main>
   <footer>
