--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <nav>
         <ul>
           <li><a href="/games/games.html">Games</a></li>
-          <li><a href="/news/dist/index.html">News</a></li>
+          <li><a href="https://latest.ultimatrix.co.in">News</a></li>
           <li><a href="/blogs/blogs.html">Blogs</a></li>
           <li><a href="/tools/tools.html">Tools</a></li>
         </ul>
@@ -73,17 +73,17 @@
         <div>
           <div id="worldNews">
             <!-- <img class = "news-section-img"src="" alt=""> -->
-            <a href="news/dist/index.html" class="news-section-heading">World News</a>
+            <a href="https://latest.ultimatrix.co.in" class="news-section-heading">World News</a>
             <p class="news-section-desc">Stay in the know with global headlines that matter.</p>
           </div>
           <div id="sportsNews">
             <!-- <img class = "news-section-img"src="" alt=""> -->
-            <a href="news/dist/index.html" class="news-section-heading">Sports News</a>
+            <a href="https://latest.ultimatrix.co.in" class="news-section-heading">Sports News</a>
             <p class="news-section-desc">Big plays. Bigger moments. Whether it's a match-winning six or a buzzer-beater, we’ve got the highlights, heartbreaks, and heroics.</p>
           </div>
           <div id="trending">
             <!-- <img class = "news-section-img"src="" alt=""> -->
-            <a href="news/dist/index.html" class="news-section-heading">Trending</a>
+            <a href="https://latest.ultimatrix.co.in" class="news-section-heading">Trending</a>
             <p class="news-section-desc">From viral videos to cultural shakeups, here’s what the internet can't stop talking about.</p>
           </div>
         </div>
@@ -94,7 +94,7 @@
           <div></div>
         </div>
       </div>
-      <a href="news/dist/index.html" class="btn">Go to News</a>
+      <a href="https://latest.ultimatrix.co.in" class="btn">Go to News</a>
     </section>
 
     <!-- Featured Blog -->
